--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="sidebar.css">
     <link rel="stylesheet" href="video.css">
+    <link rel="alternate" href="icons">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Clone</title>
 </head>
