--- a/index.html
+++ b/index.html
@@ -10,62 +10,62 @@
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="sidebar.css">
     <link rel="stylesheet" href="video.css">
-    <link rel="icon" href="icons">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Clone</title>
 </head>
 <body>
     <div class="header">
         <div class="left-section">
-            <img class="hamburger-menu" src="..\youtube clone\icons\hamburger-menu.svg">
-            <img class="youtube-logo" src="..\youtube clone\icons\youtube-logo.svg">
+            <img class="hamburger-menu" src="icons\hamburger-menu.svg">
+            <img class="youtube-logo" src="icons\youtube-logo.svg">
         </div>
         <div class="middle-section">
             <input class="search-bar" type="text" placeholder="Search">
             <button class="search-button">
-                <img  class="search-icon" src="..\youtube clone\icons\search.svg">
+                <img  class="search-icon" src="icons\search.svg">
                 <div class="tooltip">Search</div>
             </button>
-            <button class="voice-search-button"><img class="voice-search-icon" src="..\youtube clone\icons\voice-search-icon.svg">
+            <button class="voice-search-button"><img class="voice-search-icon" src="icons\voice-search-icon.svg">
                 <div class="tooltip">Search with Your voice</div>
             </button>
         </div>
         <div class="right-section">
            <div class="upload-icon-container">
-            <img class="upload-icon"src="..\youtube clone\icons\upload.svg">
+            <img class="upload-icon" src="icons\upload.svg">
             <div class="tooltip">Create</div>
            </div>
-            <img class="youtube-apps-icon"src="..\youtube clone\icons\youtube-apps.svg">
+            <img class="youtube-apps-icon" src="icons\youtube-apps.svg">
            <div class="notification-icon-container">
-            <img class="notification-icon"src="..\youtube clone\icons\notifications.svg">
+            <img class="notification-icon" src="icons\notifications.svg">
             <div class="notification-count">3</div>
            </div>
-            <img class="current-user-picture"src="..\youtube clone\icons\Snapchat-1194935031.jpg">
+            <img class="current-user-picture"src="icons\Snapchat-1194935031.jpg">
         </div>
         </div>
         <div class="sidebar">
             <div class="sidebar-link">    
-                <img src="..\youtube clone\icons\home (1).svg">
+                <img src="icons\home (1).svg">
                 <div>Home</div>    
             </div>
             <div class="sidebar-link"> 
-                <img src="..\youtube clone\icons\explore.svg">
+                <img src="icons\explore.svg">
                 <div>Explore</div>
             </div>
             <div class="sidebar-link"> 
-                <img src="..\youtube clone\icons\subscriptions.svg">
+                <img src="icons\subscriptions.svg">
                 <div>Subscriptions</div>
             </div>
             <div class="sidebar-link"> 
-                <img src="..\youtube clone\icons\originals.svg">
+                <img src="icons\originals.svg">
                 <div>originals</div>
             </div>
             <div class="sidebar-link"> 
-                <img src="..\youtube clone\icons\youtube-music.svg">
+                <img src="icons\youtube-music.svg">
                 <div>Youtube Music</div>
             </div>
             <div class="sidebar-link">
-                <img src="..\youtube clone\icons\library.svg">
+                <img src="icons\library.svg">
                 <div>Library</div>
             </div>
         </div>
@@ -73,12 +73,12 @@
         <div class="video-grid">
         <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="..\youtube clone\cartoon images\maxresdefault (2).jpg">
+                <img class="thumbnail" src="cartoon images\maxresdefault (2).jpg">
                 <div class="video-time">14:20</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="..\youtube clone\cartoon images\hq720.jpg" >
+                    <img class="profile-picture" src="cartoon images\hq720.jpg" >
                 </div>
                 <div  class="video-info">
                     <p class="video-title">
@@ -95,12 +95,12 @@
         </div>
         <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="..\youtube clone\cartoon images\maxresdefault (4).jpg">
+                <img class="thumbnail" src="cartoon images\maxresdefault (4).jpg">
                 <div class="video-time">4:20</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="..\youtube clone\cartoon images\hqdefault.jpg">
+                    <img class="profile-picture" src="cartoon images\hqdefault.jpg">
                 </div>
                 <div  class="video-info">
                     <p class="video-title">
@@ -117,12 +117,12 @@
         </div>
         <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="..\youtube clone\cartoon images\hq720.jpg">
+                <img class="thumbnail" src="cartoon images\hq720.jpg">
                 <div class="video-time">17:20</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="..\youtube clone\cartoon images\maxresdefault (6).jpg">
+                    <img class="profile-picture" src="cartoon images\maxresdefault (6).jpg">
                 </div>
                 <div  class="video-info">
                     <p class="video-title">
@@ -139,12 +139,12 @@
         </div>
         <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="..\youtube clone\cartoon images\maxresdefault (6).jpg">
+                <img class="thumbnail" src="cartoon images\maxresdefault (6).jpg">
                 <div class="video-time">8:20</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="..\youtube clone\cartoon images\maxresdefault (6).jpg">
+                    <img class="profile-picture" src="cartoon images\maxresdefault (6).jpg">
                 </div>
                 <div  class="video-info">
                     <p class="video-title">
@@ -161,12 +161,12 @@
         </div>
         <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="..\youtube clone\cartoon images\mqdefault.jpg">
+                <img class="thumbnail" src="cartoon images\mqdefault.jpg">
                 <div class="video-time">18:10</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="..\youtube clone\cartoon images\mqdefault.jpg" height="50px" width="50px">
+                    <img class="profile-picture" src="cartoon images\mqdefault.jpg" height="50px" width="50px">
                 </div>
                 <div  class="video-info">
                     <p class="video-title">
@@ -183,12 +183,12 @@
            </div>
            <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="..\youtube clone\cartoon images\maxresdefault (5).jpg">
+                <img class="thumbnail" src="cartoon images\maxresdefault (5).jpg">
                 <div class="video-time">14:20</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="..\youtube clone\cartoon images\maxresdefault (5).jpg" height="50px" width="50px">
+                    <img class="profile-picture" src="cartoon images\maxresdefault (5).jpg" height="50px" width="50px">
                 </div>
                 <div  class="video-info">
                     <p class="video-title">
@@ -205,12 +205,12 @@
            </div>
            <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="..\youtube clone\cartoon images\maxresdefault (3).jpg">
+                <img class="thumbnail" src="cartoon images\maxresdefault (3).jpg">
                 <div class="video-time">14:20</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="..\youtube clone\cartoon images\maxresdefault (3).jpg" height="50px" width="50px">
+                    <img class="profile-picture" src="cartoon images\maxresdefault (3).jpg" height="50px" width="50px">
                 </div>
                 <div  class="video-info">
                     <p class="video-title">
@@ -227,12 +227,12 @@
            </div>
            <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="..\youtube clone\cartoon images\hq720.jpg">
+                <img class="thumbnail" src="cartoon images\hq720.jpg">
                 <div class="video-time">4:20</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="..\youtube clone\cartoon images\maxresdefault (6).jpg" height="50px" width="50px">
+                    <img class="profile-picture" src="cartoon images\maxresdefault (6).jpg" height="50px" width="50px">
                 </div>
                 <div  class="video-info">
                     <p class="video-title">
